--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="hero">
         <div class="hero-content">
-            <h1>Where Learning is <span>made practical</span></h1>
+            <h1 style="margin: 10px;">Where Learning is <span>made practical</span></h1>
         </div>
     </div>
     <div class="floating-clouds">
