--- a/index.html
+++ b/index.html
@@ -19,23 +19,30 @@
             <ul id="menu-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Courses</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class="sun-moon-container">
             <div id="sun" class="sun"></div>
-            <div id="moon" class="moon"></div>
+            <div id="moon" class="moon nightmoon"></div>
         </div>
     </header>
     <div class="hero">
         <div class="hero-content">
-            <h1 style="margin: 10px;">Where Learning is <span>made practical</span></h1>
+            <h1 style="font-size: 3vh;">Where Learning is <span>made practical</span></h1>
+        </div>
+        <div class="floating-clouds">
+            <div class="cloud cloud-1"><img src="cloud.png" alt="Cloud"></div>
+            <div class="cloud cloud-2"><img src="cloud.png" alt="Cloud"></div>
         </div>
     </div>
-    <div class="floating-clouds">
-        <div class="cloud cloud-1"><img src="cloud.png" alt="Cloud"></div>
-        <div class="cloud cloud-2"><img src="cloud.png" alt="Cloud"></div>
+    <img class="tree" src="tree.png" alt="Tree" width="200px">
+    <div id="about" class="about">
+        <h2 class="heading">About Us</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia!</p>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
