--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#">Courses</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
         <h2 class="heading">About Us</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia!</p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia!</p>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
