--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="cloud cloud-2"><img src="cloud.png" alt="Cloud"></div>
         </div>
     </div>
-    <img class="tree" src="tree.png" alt="Tree" width="200px">
+    <img class="tree-1" src="tree.png" alt="Tree" width="200px">
     <div id="about" class="about">
         <h2 class="heading">About Us</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
