--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <ul id="menu-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="#courses">Courses</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class="sun-moon-container">
-            <div id="sun" class="sun"></div>
-            <div id="moon" class="moon nightmoon"></div>
+            <div id="sun" class="sun" onclick="toggleMode()"></div>
+            <div id="moon" class="moon nightmoon" onclick="toggleMode()"></div>
         </div>
     </header>
     <div class="hero">
@@ -33,16 +33,26 @@
             <h1 style="font-size: 3vh;">Where Learning is <span>made practical</span></h1>
         </div>
         <div class="floating-clouds">
-            <div class="cloud cloud-1"><img src="cloud.png" alt="Cloud"></div>
-            <div class="cloud cloud-2"><img src="cloud.png" alt="Cloud"></div>
+            <div class="cloud cloud-1"><img src="images/cloud.png" alt="Cloud"></div>
+            <div class="cloud cloud-2"><img src="images/cloud.png" alt="Cloud"></div>
         </div>
     </div>
-    <img class="tree-1" src="tree.png" alt="Tree" width="200px">
+    <img class="tree-1" src="images/tree.png" alt="Tree" width="200px">
+    <img class="stone" src="images/stone.png" alt="Stone" width="70px">
     <div id="about" class="about">
         <h2 class="heading">About Us</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestias qui commodi eaque harum corporis iste temporibus perspiciatis facilis ipsa non dolorum enim voluptatum amet a quidem quod modi. Officia!</p>
+    </div>
+    <div id="courses" class="courses">
+        <h2 class="heading">Courses</h2>
+        <div class="course course-1"><h1 class="imagee">{+-}</h1><br>The Math Game</div>
+        <div class="course course-2"><h1 class="imagee">🧠</h1><br>General Knowledge</div>
+        <div class="course course-3"><h1 class="imagee">Abc</h1><br>English</div>
+        <div class="course course-4"><h1 class="imagee">code;</h1><br>Computers</div>
+        <div class="course course-5"><h1 class="imagee">🌏</h1><br>Environment</div>
+        <div class="course course-6"><h1 class="imag">☀️🌑</h1><br>Solar Systems</div>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
