--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p>
         <br><br>
-        <a class="button-about">Know More</a>
+        <a class="button-about" href="about.html">Know More</a>
       </div>
     </div>
     <div id="courses" class="courses">
