buggy code added

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="hero-content">
             <h2 style="font-size: 3vh;">Where Learning is <span>made practical</span></h2><br>
             <ul class="icons">
-              <li class="icon"><a href=""></a><i class="fa-brands fa-youtube"></i></li>
-              <li class="icon"><a href=""></a><i class="fa-brands fa-linkedin"></i></li>
-              <li class="icon"><a href=""></a><i class="fa-brands fa-instagram"></i></li>
-              <li class="icon"><a href=""></a><i class="fa-brands fa-facebook"></i></li>
+              <li class="icon"><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
+              <li class="icon"><a href="https://www.linkedin.com/"></a><i class="fa-brands fa-linkedin"></i></a></li>
+              <li class="icon"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+              <li class="icon"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
             </ul>
         </div>
         <div class="floating-clouds">
@@ -51,11 +51,11 @@
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
         <div class="space">
-        <img src="images/about.png" alt="cartoon" height="150px"><br>
+        <img src="images/about.png" alt="cartoon" height="145px"><br>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p>
         <br><br>
-        <a class="button-about" href="about.html">Know More</a>
+        <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
     <div id="courses" class="courses">
