--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
         <nav>
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#courses">Courses</a></li>
-                <li><a href="#">Contact</a></li>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#games">Games</a>
+                </li>
+                <li>
+                  <a href="#about">About</a>
+                </li>
+                <li>
+                  <a href="#courses">Courses</a>
+                </li>
+                <li>
+                  <a href="#contact">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -33,73 +43,51 @@
     </div>
     <div class="hero">
         <div class="hero-content">
-            <h2 style="font-size: 3vh;">Where Learning is <span>made practical</span></h2><br>
+            <h2 class="hehe">Where Learning is <span>made practical</span></h2><br>
             <ul class="icons">
-              <li class="icon"><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
-              <li class="icon"><a href="https://www.linkedin.com/"></a><i class="fa-brands fa-linkedin"></i></a></li>
-              <li class="icon"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
-              <li class="icon"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+              <li>
+                  <a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+              </li>
+              <li>
+                <a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+              </li>
+              <li>
+                <a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+              </li>
             </ul>
         </div>
-        <div class="floating-clouds">
-            <div class="cloud cloud-1 "><img src="images/cloudy.png" alt="Cloud"></div>
-            <div class="cloud cloud-2 "><img src="images/cloudy.png" alt="Cloud"></div>
-        </div>
+      <div class="floating-clouds">
+          <div class="cloud cloud-1 "><img src="images/cloudy.png" alt="Cloud"></div>
+          <div class="cloud cloud-2 "><img src="images/cloudy.png" alt="Cloud"></div>
+      </div>
     </div>
     <img class="tree-1" src="images/tree.png" alt="Tree" width="200px">
     <img class="stone" src="images/rock.png" alt="Stone" width="70px">
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
         <div class="space">
-        <img src="images/about.png" alt="cartoon" height="135px"><br>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p>
-        <br><br>
-        <a class="button-about" href="about.html" target="_blank">Know More</a>
+          <img src="images/about.png" alt="cartoon" height="160px">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p><br><br>
+          <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
-    <div id="courses" class="courses">
-        <h2 class="heading">Courses</h2>
-        <div class="card">
-            <img src="images/math.jpeg" alt="Maths" height="100px">
-            <h1>Math</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
-          <div class="card">
-            <img src="images/computers.jpeg" alt="computers" height="100px">
-            <h1>Computers</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
-          <div class="card">
-            <img src="images/english.jpeg" alt="english" height="100px">
-            <h1>English</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
-          <div class="card">
-            <img src="images/environment.jpeg" alt="environment" height="100px">
-            <h1>Environment</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
-          <div class="card">
-            <img src="images/solar systems.jpeg" alt="solar" height="100px">
-            <h1>The Universe</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
-          <div class="card">
-            <img src="images/general knowledge.jpeg" alt="gk" height="100px">
-            <h1>General Knowledge</h1>
-            <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-            <p><button>Add to Cart</button></p>
-          </div>
+    <div id="courses" class="courses space">
+        <h2 class="heading courses-heading">What do we do?</h2>
+        <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio nulla enim possimus nostrum excepturi, necessitatibus quasi voluptas nemo accusantium pariatur ipsa sequi. Voluptate minus, aspernatur harum obcaecati cum laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate atque molestias, doloribus, assumenda id modi temporibus suscipit at nemo repellendus, qui officiis eveniet debitis laboriosam. Nihil eius nulla doloremque cupiditate.</p>
+        <div class="box">
+
+        </div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
     <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/26fcbf9d31.js" crossorigin="anonymous"></script>
 </body>
 </html>
