minor text size bugs

--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
     </div>
     <div id="courses" class="courses space">
         <h2 class="heading courses-heading">What do we do?</h2>
-        <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio nulla enim possimus nostrum excepturi, necessitatibus quasi voluptas nemo accusantium pariatur ipsa sequi. Voluptate minus, aspernatur harum obcaecati cum laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate atque molestias, doloribus, assumenda id modi temporibus suscipit at nemo repellendus, qui officiis eveniet debitis laboriosam. Nihil eius nulla doloremque cupiditate.</p>
+        <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio nulla enim possimus nostrum excepturi, necessitatibus quasi voluptas nemo accusantium pariatur ipsa sequi. Voluptate minus, aspernatur harum obcaecati cum laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate atque molestias, doloribus, assumenda id modi temporibus suscipit at nemo repellendus, qui officiis eveniet debitis laboriosam. Nihil eius nulla doloremque cupiditate.</p><br>
         <div class="box">
 
         </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+    </div>
+    <div id="contact" class="contact">
+      <h2 class="heading">Contact</h2>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
