--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
               <li>
                 <a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
               </li>
-            </ul>
+            </ul><br>
+            <button class="sign-in">Sign in</button>
         </div>
       <div class="floating-clouds">
           <div class="cloud cloud-1 "><img src="images/cloudy.png" alt="Cloud"></div>
@@ -69,13 +70,12 @@
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
         <div class="space">
-          <img src="images/about.png" alt="cartoon" height="160px">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p><br><br>
           <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
     <div id="courses" class="courses space">
-        <h2 class="heading courses-heading">What do we do?</h2>
+        <h2 class="heading courses-heading">What do we do?</h2><br>
         <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio nulla enim possimus nostrum excepturi, necessitatibus quasi voluptas nemo accusantium pariatur ipsa sequi. Voluptate minus, aspernatur harum obcaecati cum laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate atque molestias, doloribus, assumenda id modi temporibus suscipit at nemo repellendus, qui officiis eveniet debitis laboriosam. Nihil eius nulla doloremque cupiditate.</p><br>
     </div><br>
     <div id="course-list" class="course-list">
