--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="cursor-dot" data-cursor-dot></div>
         <div class="cursor-outline" data-cursor-outline></div>
         <header>
-            <div class="logo">Mini <span>Minds</span></div>
+            <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
             <nav>
                 <div id="menu-icon" class="menu-icon">&#9776;</div>
                 <ul id="menu-items">
