--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
     <header>
-        <div class="logo">Mini <span>Minds</span></div>
+        <div class="logo"><a href="#hero">Mini <span>Minds</span></a></div>
         <nav>
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
@@ -23,13 +23,13 @@
                   <a href="#">Home</a>
                 </li>
                 <li>
-                  <a href="#games">Games</a>
-                </li>
-                <li>
                   <a href="#about">About</a>
                 </li>
                 <li>
                   <a href="#courses">Courses</a>
+                </li>
+                <li>
+                  <a href="#games">Games</a>
                 </li>
                 <li>
                   <a href="#contact">Contact</a>
@@ -41,7 +41,7 @@
         <div id="sun" class="sun" onclick="toggleMode()"></div>
         <div id="moon" class="moon" onclick="toggleMode()"></div>
     </div>
-    <div class="hero">
+    <div id="hero" class="hero">
         <div class="hero-content">
             <h2 class="hehe">Where Learning is <span>made practical</span></h2><br>
             <ul class="icons">
@@ -69,15 +69,28 @@
     <img class="stone" src="images/rock.png" alt="Stone" width="70px">
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
+        <img src="images/about.png" alt="cartoon">
         <div class="space">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p><br><br>
           <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
     <div id="courses" class="courses space">
-        <h2 class="heading courses-heading">What do we do?</h2><br>
-        <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio nulla enim possimus nostrum excepturi, necessitatibus quasi voluptas nemo accusantium pariatur ipsa sequi. Voluptate minus, aspernatur harum obcaecati cum laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate atque molestias, doloribus, assumenda id modi temporibus suscipit at nemo repellendus, qui officiis eveniet debitis laboriosam. Nihil eius nulla doloremque cupiditate.</p><br>
+        <h2 class="heading courses-heading">What do we do?</h2>
+        <img src="images/our courses.png" alt="cartoon">
+        <div class="space">
+          <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt.</p><br><br>
+          <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
+        </div>
     </div><br>
+    <div class="games" id="games">
+      <h2 class="heading games-heading">Games</h2>
+      <img src="images/games.png" alt="cartoon"><br>
+      <div class="space">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem?</p><br><br>
+        <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
+      </div>
+    </div>
     <div id="course-list" class="course-list">
       <h2 class="h-course">Our Courses</h2>
       <div class="box"></div>
