--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div id="hero" class="hero">
         <div class="hero-content">
-            <h2 class="hehe">Where Learning is <span>made practical</span></h2><br>
+            <h2 class="hehe">Where Learning is <span>made practical</span></h2>
             <ul class="icons">
               <li>
                   <a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
@@ -59,6 +59,7 @@
               </li>
             </ul><br>
             <button class="sign-in">Sign in</button>
+            <p>no account? <a href="">Sign up</a></p>
         </div>
       <div class="floating-clouds">
           <div class="cloud cloud-1 "><img src="images/cloudy.png" alt="Cloud"></div>
@@ -87,12 +88,12 @@
       <h2 class="heading games-heading">Games</h2>
       <img src="images/games.png" alt="cartoon"><br>
       <div class="space">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem?</p><br><br>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
         <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
       </div>
     </div>
     <div id="course-list" class="course-list">
-      <h2 class="h-course">Our Courses</h2>
+      <h2 class="heading courses-heading">Our Courses</h2><br>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
