major-minor work

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div id="courses" class="courses space">
-        <h2 class="heading courses-heading">What do we do?</h2>
+        <h2 class="heading">What do we do?</h2>
         <img src="images/our courses.png" alt="cartoon">
         <div class="space">
           <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt.</p><br><br>
@@ -85,7 +85,7 @@
         </div>
     </div><br>
     <div class="games" id="games">
-      <h2 class="heading games-heading">Games</h2>
+      <h2 class="heading">Our Edu-Games</h2>
       <img src="images/games.png" alt="cartoon"><br>
       <div class="space">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
@@ -93,14 +93,16 @@
       </div>
     </div>
     <div id="course-list" class="course-list">
-      <h2 class="heading courses-heading">Our Courses</h2><br>
+      <h2 class="heading">Our Courses</h2><br>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
     </div>
     <div id="contact" class="contact">
-      <h2 class="heading">Contact</h2>
+      <h2 class="heading">Contact Us</h2>
+      <div>
+      </div>
     </div>
     <div class="sky"></div>
     <div class="stars"></div>
