--- a/index.html
+++ b/index.html
@@ -99,11 +99,29 @@
       <div class="box"></div>
       <div class="box"></div>
     </div>
-    <div id="contact" class="contact">
-      <h2 class="heading">Contact Us</h2>
-      <div>
+    <footer>
+      <div id="contact" class="contact">
+        <h2 class="heading">Contact Us</h2>
+        <div>
+          <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India - 524001</p>
+          <p><strong>Contact:</strong><br>0123456789,0123456789</p>
+        </div>
+        <div><p><strong>Social Links: </strong></p><ul class="icons">
+          <li>
+              <a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+        </ul><br></div>
       </div>
-    </div>
+    </footer>
     <div class="sky"></div>
     <div class="stars"></div>
     <script src="script.js"></script>
