functionality bugs fixed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt.</p><br><br>
           <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
         </div>
-    </div><br>
+    </div>
     <div class="games" id="games">
       <h2 class="heading">Our Edu-Games</h2>
       <img src="images/games.png" alt="cartoon"><br>
