--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </div>
     <div id="course-list" class="course-list">
       <h2 class="heading">Our Courses</h2><br>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box">ABC</div>
+      <div class="box">123</div>
+      <div class="box">COD</div>
+      <div class="box">000</div>
     </div>
     <footer>
       <div id="contact" class="contact">
