--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="aboutus about">
+        <div class="aboutus">
             <h2 class="heading">About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis porro, error ad eveniet, placeat sequi blanditiis aliquid sapiente rerum ab quo autem nobis iste eligendi, iusto quae consequatur adipisci suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam modi nihil doloremque, ipsa cum perferendis. Doloremque quae qui in laudantium accusantium eum itaque minus, asperiores ullam officiis inventore ipsa labore?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, beatae. Nam voluptas ab debitis blanditiis deserunt, quasi perferendis temporibus ad distinctio eum aperiam, vero dolore beatae odio iure adipisci ducimus?lorm
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi aperiam nesciunt mollitia numquam assumenda? Quia, recusandae corrupti repellat, hic quod atque amet animi ducimus eveniet beatae, delectus quidem inventore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perspiciatis nam dignissimos. Reiciendis ea enim, architecto beatae at rem vel quae voluptates, a eius officia consectetur sequi dolorum. Eligendi, voluptatibus?</Illo>
