--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div id="moon" class="moon" onclick="toggleMode()"></div>
     </div>
     <div id="hero" class="hero">
-        <div class="hero-content">
-            <h2 class="hehe">Where Learning is <span>made practical</span></h2>
-            <ul class="icons">
+        <div class="hero-content fadeInUp-animation">
+            <h2 class="hehe fadeInUp-animation">Where Learning is <span>made practical</span></h2>
+            <ul class="icons ">
               <li>
                   <a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
               </li>
@@ -70,34 +70,34 @@
     <img class="stone" src="images/rock.png" alt="Stone" width="70px">
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
-        <img src="images/about.png" alt="cartoon">
-        <div class="space">
+        <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
+        <div class="space fade-in-left-target">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p><br><br>
           <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
     <div id="courses" class="courses space">
         <h2 class="heading">What do we do?</h2>
-        <img src="images/our courses.png" alt="cartoon">
-        <div class="space">
+        <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
+        <div class="space fade-in-left-target">
           <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt.</p><br><br>
           <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
         </div>
     </div>
     <div class="games" id="games">
       <h2 class="heading">Our Edu-Games</h2>
-      <img src="images/games.png" alt="cartoon"><br>
-      <div class="space">
+      <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
+      <div class="space fade-in-left-target">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
         <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
       </div>
     </div>
     <div id="course-list" class="course-list">
       <h2 class="heading">Our Courses</h2><br>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box fade-in-left-target"></div>
+      <div class="box fade-in-right-target"></div>
+      <div class="box fade-in-left-target"></div>
+      <div class="box fade-in-right-target"></div>
     </div>
     <footer>
       <div id="contact" class="contact">
